<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:menu="@menu/main_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:subtitle="@string/updatedEvery"
        app:subtitleTextAppearance="@style/ToolBarSubtitleStyle"
        app:subtitleTextColor="@android:color/white"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolBarTitleStyle"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/myCountryCon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/grid_header_alt">
                    <TextView
                        android:id="@+id/myCountryName"
                        tools:text="Nigeria"
                        style="@style/MyCountryTitle" />
                    <TextView
                        android:text="@string/cases"
                        style="@style/MyCountryTitle"/>
                    <TextView
                        android:text="@string/deaths"
                        style="@style/MyCountryTitle"/>
                    <TextView
                        android:text="@string/tests"
                        style="@style/MyCountryTitle"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        style="@style/MyCountrySingleColumn">

                        <RelativeLayout
                            style="@style/MyCountrySingleColumnRel">

                            <ImageView
                                android:id="@+id/myCountryFlag"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitCenter"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                tools:srcCompat="@drawable/ng" />
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/circle_trans"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/MyCountrySingleColumn">

                        <RelativeLayout
                            style="@style/MyCountrySingleColumnRel">

                            <TextView
                                android:id="@+id/myCountryCases"
                                tools:text="+167"
                                style="@style/MyCountryValue"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/MyCountrySingleColumn">

                        <RelativeLayout
                            style="@style/MyCountrySingleColumnRel">

                            <TextView
                                android:id="@+id/myCountryDeaths"
                                tools:text="+24"
                                style="@style/MyCountryValue"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/MyCountrySingleColumn">

                        <RelativeLayout
                            style="@style/MyCountrySingleColumnRel">

                            <TextView
                                android:id="@+id/myCountryTests"
                                tools:text="10000"
                                style="@style/MyCountryValue"/>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/selectCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toStartOf="@id/vieMore"
                    android:layout_gravity="end"
                    android:layout_centerInParent="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:dropDownWidth="wrap_content"
                    android:padding="2dp"
                    android:theme="@style/Theme.AppCompat.Light"
                    android:spinnerMode="dialog"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/vieMore"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:padding="2dp"
                    android:text="@string/view_more"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grid_header"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/countryCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                tools:text="0" />

            <TextView
                android:id="@+id/updated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="20th May, 5:15pm"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </LinearLayout>

        <GridView
            android:id="@+id/countryGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="8dp"
            android:numColumns="3"
            android:verticalSpacing="8dp"
            android:paddingBottom="50dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/connectionInfo"
        style="@style/LoaderContainer">

        <ImageView
            android:id="@+id/mconInfoImage"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:rotation="140"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/balonku_regular"
            android:gravity="center"
            android:lineHeight="70dp"
            android:text="@string/connection_Message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/loadIndicator"
        style="@style/LoaderContainer">

        <ImageView
            android:id="@+id/mloadImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_bacteria"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/balonku_regular"
            android:gravity="center"
            android:lineHeight="70dp"
            android:text="@string/loading_message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2943553509013283/3550045508"
        android:layout_gravity="bottom|center_horizontal">
    </com.google.android.gms.ads.AdView>

<!--    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->


</RelativeLayout>